Added header , genre and footer

--- a/genre.html
+++ b/genre.html
@@ -3,9 +3,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/nav.css">
     <title>Document</title>
 </head>
 <body>
-    Jeg skriver en masse her, der skal vi lige se 
+    <header>
+        <img class="cart" src="img/genre/cart.png" alt="cart logo">
+        <img class="logo" src="img/genre/logo_gul.svg" alt="Palmspree logo with yellow lettermark">
+        <input type="checkbox" id="burger-toggle" />
+      <label for="burger-toggle" class="burger-menu"> ☰ </label>
+        <nav>
+            <ol>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="genre.html">GENRE</a></li>
+                <li><a href="products.html">PRODUCTS</a></li>
+                <li><a href="ps_fm.html">PS-FM RADIO</a></li>
+                <li><a href="record_club.html">RECORD CLUB</a></li>
+            </ol>
+        </nav>
+    </header>
+    <main> 
+        <div class="page_pic">
+            <h1>GENRE</h1>
+            <img src="img/genre/genre.JPG" alt="picture of vinyls in a crate">
+        </div>
+
+        <section>
+            <h2>AFRO</h2>
+            <div>
+                <a href="hihi.html">View All ></a>
+                <div class="two_products">
+                <div class="product">
+                    <img src="img/genre/flammer_dance.png" alt="">
+                    <p>FLAMMER DANCE BAND 'FLAMMER LP (GREEN REPRESS)'
+                    </p>
+                    <h4>DKK 180.00</h4>
+                    <a href="">ADD TO CART</a>
+                </div>
+                <div class="product">
+                    <img src="img/genre/pigeo.png" alt="">
+                    <p>PIGEON 'BACKSLIDER'</p>
+                    <p>DKK 180.00</p>
+                    <a href="">ADD TO CART</a>
+                </div>
+            </div>
+            </div>
+            <h2>BEATS</h2>
+            <div>
+                <a href="hihi.html">View All ></a>
+                <div class="two_products">
+                <div class="product">
+                    <img src="img/genre/flammer_dance.png" alt="">
+                    <p>FLAMMER DANCE BAND 'FLAMMER LP (GREEN REPRESS)'
+                    </p>
+                    <h4>DKK 180.00</h4>
+                    <a href="">ADD TO CART</a>
+                </div>
+                <div class="product">
+                    <img src="img/genre/pigeo.png" alt="">
+                    <p>PIGEON 'BACKSLIDER'</p>
+                    <p>DKK 180.00</p>
+                    <a href="">ADD TO CART</a>
+                </div>
+            </div>
+            </div>
+            <div class="two_pics">
+                <img src="img/genre/organic_groove.JPG" alt="pic of organic groove poster">
+                <img src="img/genre/recordplayer.JPG" alt="pic of wall with books and record player">
+            </div>
+            <h2>HIPHOP</h2>
+            <div>
+                <a href="hihi.html">View All ></a>
+                <div class="two_products">
+                <div class="product">
+                    <img src="img/genre/flammer_dance.png" alt="">
+                    <p>FLAMMER DANCE BAND 'FLAMMER LP (GREEN REPRESS)'
+                    </p>
+                    <h4>DKK 180.00</h4>
+                    <a href="">ADD TO CART</a>
+                </div>
+                <div class="product">
+                    <img src="img/genre/pigeo.png" alt="">
+                    <p>PIGEON 'BACKSLIDER'</p>
+                    <p>DKK 180.00</p>
+                    <a href="">ADD TO CART</a>
+                </div>
+            </div>
+            </div>
+        </section>
+
+    </main>
+    <footer>
+        <hr width="100%" size="2" color="black">
+        <div>
+        <div class="info">
+        <p>  PALMSPREE RECORDS
+            <br>
+            STEFANSGADE 10 KLD TH
+            <br>
+            2200 NØRREBRO
+            <br>
+            DK
+            <br>
+            <br>
+            palmspreecph@gmail.com</p>
+        <p>
+            HOURS
+            <br>
+            TUESDAY                  11:00 - 15.00
+            <br>
+            WEDNESDAY            11:00 - 17:30
+            <br>
+            THURSDAY               11:00 - 17:30
+            <br>
+            FRIDAY                      11:00 - 17:30
+            <br>SATURDAY                12:00 - 16:00
+        </p>
+    </div>
+    <img src="img/genre/links.png" alt="facebook and instagram icons">
+    </div>
+
+    </footer>
 </body>
 </html>
