footer links, genre done

--- a/footer.html
+++ b/footer.html
@@ -34,7 +34,10 @@
             <br>SATURDAY                12:00 - 16:00
         </p>
     </div>
-    <img src="img/genre/links.png" alt="facebook and instagram icons">
+    <div class="links">
+    <a href="https://www.facebook.com/palmspree/?locale=da_DK"><img src="img/genre/facebook.png" alt="facebook icon"></a>
+    <a href="https://www.instagram.com/palmspree/"> <img src="img/genre/instagram.png" alt="instagram icons"></a>
+</div>
     </div>
 
     </footer>
