--- a/genre.html
+++ b/genre.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/genre.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -24,14 +25,14 @@
         </nav>
     </header>
     <main> 
-        <div class="page_pic">
-            <h1>GENRE</h1>
-            <img src="img/genre/genre.JPG" alt="picture of vinyls in a crate">
+        <div>
+            <img class="title" src="img/genre/genreoverskrift.svg" alt="text saying genre">
+            <img class="g_pic" src="img/genre/genre.JPG" alt="picture of vinyls in a crate">
         </div>
 
         <section>
             <h2>AFRO</h2>
-            <div>
+            <div class="genre_container">
                 <a href="hihi.html">View All ></a>
                 <div class="two_products">
                 <div class="product">
@@ -44,26 +45,27 @@
                 <div class="product">
                     <img src="img/genre/pigeo.png" alt="">
                     <p>PIGEON 'BACKSLIDER'</p>
-                    <p>DKK 180.00</p>
+                    <h4>DKK 180.00</h4>
                     <a href="">ADD TO CART</a>
                 </div>
             </div>
             </div>
+
             <h2>BEATS</h2>
-            <div>
+            <div class="genre_container">
                 <a href="hihi.html">View All ></a>
                 <div class="two_products">
                 <div class="product">
-                    <img src="img/genre/flammer_dance.png" alt="">
-                    <p>FLAMMER DANCE BAND 'FLAMMER LP (GREEN REPRESS)'
+                    <img src="img/genre/kutmar.png" alt="">
+                    <p>KUTMAH 'NEW APPLIANCE' (10'')
                     </p>
-                    <h4>DKK 180.00</h4>
+                    <h4>DKK 130.00</h4>
                     <a href="">ADD TO CART</a>
                 </div>
                 <div class="product">
-                    <img src="img/genre/pigeo.png" alt="">
-                    <p>PIGEON 'BACKSLIDER'</p>
-                    <p>DKK 180.00</p>
+                    <img src="img/genre/mutual_friends.png" alt="">
+                    <p>V/A 'MUTUAL FRIENDS'</p>
+                    <h4>DKK 180.00</h4>
                     <a href="">ADD TO CART</a>
                 </div>
             </div>
@@ -73,20 +75,20 @@
                 <img src="img/genre/recordplayer.JPG" alt="pic of wall with books and record player">
             </div>
             <h2>HIPHOP</h2>
-            <div>
+            <div class="genre_container">
                 <a href="hihi.html">View All ></a>
                 <div class="two_products">
                 <div class="product">
-                    <img src="img/genre/flammer_dance.png" alt="">
-                    <p>FLAMMER DANCE BAND 'FLAMMER LP (GREEN REPRESS)'
+                    <img src="img/genre/ghostface.png" alt="">
+                    <p>GHOSTFACE 'PRETTY TONEY ALBUM' (2LP)
                     </p>
-                    <h4>DKK 180.00</h4>
+                    <h4>DKK 250.00</h4>
                     <a href="">ADD TO CART</a>
                 </div>
                 <div class="product">
-                    <img src="img/genre/pigeo.png" alt="">
-                    <p>PIGEON 'BACKSLIDER'</p>
-                    <p>DKK 180.00</p>
+                    <img src="img/genre/bahamadia.png" alt="">
+                    <p>BAHAMADIA 'KOLLAGE'(2LP)</p>
+                    <h4>DKK 330.00</h4>
                     <a href="">ADD TO CART</a>
                 </div>
             </div>
@@ -121,7 +123,10 @@
             <br>SATURDAY                12:00 - 16:00
         </p>
     </div>
-    <img src="img/genre/links.png" alt="facebook and instagram icons">
+    <div class="links">
+        <a href="https://www.facebook.com/palmspree/?locale=da_DK"><img src="img/genre/facebook.png" alt="facebook icon"></a>
+        <a href="https://www.instagram.com/palmspree/"> <img src="img/genre/instagram.png" alt="instagram icons"></a>
+    </div>
     </div>
 
     </footer>
