--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     Hvis jeg bare tilføjer noget her, hvad sker der så?
-    jeg skriver her
+    <a href="genre.html">genre</a>
 </body>
 </html> 
